--- a/style.css
+++ b/style.css
@@ -13,3 +13,13 @@
     border: 1px solid lightgray;
     margin-top: 100px;
   }
+
+.tile {
+  width: 100%;
+  height: 100%;
+  border: solid 1px black;
+}
+
+.ship {
+  background-color: red;
+}
